# aji

./: .env  .env.example  CLAUDE.md  Makefile  docker-compose.yml
.claude/: decisions.md  settings.json  settings.local.json
.claude/agents/: README.md  aji-architect.md  aji-backend.md  aji-devops.md  aji-frontend.md  aji-legal.md  aji-rag.md  (+2 more)
Fundamentos de Vibe Design/: Links citados no Curso.rtf
aji-setup/: EXECUTION_PLAN.md  setup-aji.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 704e9b849481_create_legal_chunks.py  c10328d8313c_create_tenants_and_users.py  eca1cef8acd5_create_conversations_and_messages.py
backend/app/: main.py
backend/app/api/v1/: auth.py  billing.py  chat.py  documents.py  partners.py  router.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  base.py  conversation.py  legal_chunk.py  message.py  tenant.py  user.py
backend/app/schemas/: auth.py
backend/app/services/ai/: __init__.py  chat_service.py  model_selector.py  quota.py
backend/app/services/billing/: stripe_service.py  webhook_handler.py
backend/app/services/cnpj/: brasilapi.py
backend/app/services/rag/: chunker.py  embeddings.py  ingestion.py  retrieval.py
backend/scripts/: ingest_knowledge_base.py
backend/tests/: test_billing.py  test_chat.py  test_health.py  test_rag.py
chatbot/: .env  README.md  app.py  ingest.py  requirements.txt
info_projeto/: AJI Analise Viabilidade.docx  AJI Canal Contadores.docx  AJI_material_contabilidade.md  AJI_material_empresarios.md
(+65 files in other folders)
