[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aji-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "openai==1.30.1",
    "langchain==0.2.1",
    "langchain-openai==0.1.8",
    "langchain-community==0.2.1",
    "pgvector==0.3.0",
    "stripe==9.12.0",
    "celery[redis]==5.4.0",
    "redis==5.0.4",
    "sentry-sdk[fastapi]==2.3.1",
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "anyio==4.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
